plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.13.3'
}

group 'io.openliberty.tools'
version '0.0.9-SNAPSHOT'

sourceCompatibility = 17

repositories {
    mavenCentral()
    maven {
        url 'https://repo.eclipse.org/content/repositories/snapshots'
    }
    maven {
        url 'https://repo.eclipse.org/content/repositories/releases'
    }
    maven {
        url "https://oss.sonatype.org/content/repositories/snapshots"
    }
    mavenLocal() // TODO remove once Liberty LS is publicly available
}

configurations {
    lsp
    // needed to avoid ClassCastException org.apache.xerces.jaxp.DocumentBuilderFactoryImpl cannot be cast to class javax.xml.parsers.DocumentBuilderFactory
    // xml-apis interfering with xercs
    all*.exclude group: 'xml-apis'
}

dependencies {
    // LSP4IJ dependencies
    implementation 'org.eclipse.lsp4mp:org.eclipse.lsp4mp.ls:0.6.0'
    implementation 'org.eclipse.lsp4j:org.eclipse.lsp4j:0.15.0'
    implementation 'org.eclipse.lemminx:org.eclipse.lemminx:0.22.0'
    implementation 'io.openliberty.tools:liberty-langserver-lemminx:1.0-M2-SNAPSHOT'
    implementation 'io.openliberty.tools:liberty-langserver:1.0-M1'
    implementation 'org.eclipse.lsp4jakarta:org.eclipse.lsp4jakarta.ls:0.1.0'
    //required by lsp4j as the version from IJ is incompatible
    implementation 'com.google.code.gson:gson:2.8.9'
    implementation 'com.vladsch.flexmark:flexmark:0.50.50'
    implementation 'org.jsoup:jsoup:1.15.3'
    //Add junit dependency back when tests are added
    //testImplementation group: 'junit', name: 'junit', version: '4.13.1'
    implementation 'org.apache.maven:maven-artifact:3.6.3'

    lsp('org.eclipse.lsp4mp:org.eclipse.lsp4mp.ls:0.6.0:uber') {
        transitive = false
    }
    lsp('org.eclipse.lemminx:org.eclipse.lemminx:0.22.0:uber') {
            transitive = false
    }
    lsp('io.openliberty.tools:liberty-langserver-lemminx:1.0-M2-SNAPSHOT:jar-with-dependencies') {
        transitive = false
    }
    lsp('io.openliberty.tools:liberty-langserver:1.0-M1:jar-with-dependencies') {
        transitive = false
    }
    lsp('org.eclipse.lsp4jakarta:org.eclipse.lsp4jakarta.ls:0.1.0:jar-with-dependencies') {
        transitive = false
    }
    implementation files(new File(buildDir, 'server')) {
        builtBy 'copyDeps'
    }
}

task copyDeps(type: Copy) {
    from configurations.lsp
    into new File(buildDir, 'server/server')
    rename '^(.*)(-[0-9]+.[0-9]+.[0-9]+(-SNAPSHOT)?)(.*)$', '$1$4'
}

runIde {
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
}

intellij {
    version = '2023.1' //for a full list of IntelliJ IDEA releases please see https://www.jetbrains.com/intellij-repository/releases
    plugins = ['java', 'maven', 'gradle-java', 'properties', 'terminal', 'org.jetbrains.idea.maven', 'com.intellij.gradle']
    updateSinceUntilBuild = false
}

patchPluginXml {
    changeNotes = """
        <h2> 0.0.8 </h2>
        Version 0.0.8 of Liberty Tools for IntelliJ IDEA is an <b>early release</b> that contains new functionality and fixes. Liberty Tools for IntelliJ IDEA now requires IntelliJ IDEA version 2022.2+.
        <br>
        Notable enhancements:
        <ul>
        <li> Completion support when editing server.xml, server.env, bootstrap.properties via the <a href="https://github.com/OpenLiberty/liberty-language-server">Liberty Config Language Server</a>.
        <li> Completion support for Jakarta EE Web Profile 9.x APIs when editing Java files via the <a href="https://github.com/eclipse/lsp4jakarta">Eclipse LSP4Jakarta</a>, Language Server for Jakarta EE.
        <li> Completion support for MicroProfile 3 & 4 APIs when editing Java and microprofile-config.properties files via the <a href="https://github.com/eclipse/lsp4mp">Eclipse LSP4MP</a>, Language Server for MicroProfile.
        <li> Liberty projects are now automatically detected via the presence of a “src/main/liberty/config/server.xml” file.
        <li> New Liberty Run/Debug Configuration, accessible through the “Liberty: Start…” action or the IntelliJ Run/Debug Configuration menu. When “Debug” is selected, the Liberty runtime will start and the IntelliJ debugger will automatically attach to the JVM for the running Liberty instance.
        <li> Ability to run Liberty actions through the IntelliJ “Go To Action” menu.
        <li> Ability to manually add Liberty projects to the Liberty tool window.
        <li> Liberty start actions will honour the Maven home path and Gradle JVM set in IntelliJ IDEA preferences.
        <li> New icons for Maven and Gradle projects in the Liberty tool window.
        </ul>
        See the <a href="https://github.com/OpenLiberty/liberty-tools-intellij/compare/0.0.7...0.0.8">commit log</a> for the full set of changes since the previous early release.
        <br>
        <h2> 0.0.7 </h2>
        <ul>
        <li> Rename plugin to Liberty Tools for IntelliJ
        </ul>
        <h2> 0.0.6 </h2>
        <ul>
        <li> Fix release
        </ul>
        <h2> 0.0.5 </h2>
        <ul>
        <li> Update action wording and documentation
        </ul>
        <h2> 0.0.4 </h2>
        <ul>
        <li> Removed tech preview wording from "start in container" action
        </ul>
        <h2> 0.0.3 </h2>
        <ul>
        <li> Updated plugin description
        </ul>
        <h2> 0.0.2 </h2>
        <ul>
        <li> Added start in container (tech preview) action
        </ul>
        <h2> 0.0.1 </h2>
        <ul>
        <li> First preview release
        </ul>
        """
    version project.version
}